deploy/overlays/tst/node-mumc/components/portal-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mumc-portal-gateway
  namespace: dh-health
spec:
  gatewayClassName: traefik
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      hostname: portal.mumc.tst.dh.unimaas.nl
      tls:
        mode: Terminate
        certificateRefs:
          - name: portal-mumc-tls-secret
    - name: http
      port: 80
      protocol: HTTP
      hostname: portal.mumc.tst.dh.unimaas.nl
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mumc-portal-route
  namespace: dh-health
spec:
  parentRefs:
    - name: mumc-portal-gateway
  hostnames:
    - portal.mumc.tst.dh.unimaas.nl
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mumc-portal
          port: 3000
